# 3D-Gaussian-Splatting

./: .gitignore  README.md  commands.py  config.py  logger.py  main.py  pyproject.toml  trainer.py  utils.py
config/: high_quality.yaml  quick.yaml
